# web-novel-scraper

./: .gitignore  Cargo.toml  parse_api_docs.py
src/: api_hall_of_fame.rs  api_narou.rs  api_nocturne.rs  api_ranking.rs  api_user.rs  fetcher.rs  lib.rs  main.rs  novel_scraper.rs  rating_scraper.rs
src/api/: mod.rs
src/api/common/: client.rs  error.rs  mod.rs  request.rs  response.rs
src/api/endpoints/: hall_of_fame.rs  mod.rs  narou.rs  nocturne.rs  ranking.rs  user.rs
src/api/narou/: client.rs  mod.rs  models.rs  novel_api.rs  rankin_api.rs  ranking_api.rs  user_api.rs
src/api/nocturne/: client.rs  mod.rs  models.rs  novel_api.rs
target_pages/: url_formats.md
target_pages/api_documentation/: README.md  narou_hall_of_fame_api.md  narou_novel_api.md  narou_novel_ranking_api.md  narou_ranking_api.md  narou_user_api.md  narou_user_search_api.md  nocturne_novel_api.md  nocturne_r18_api.md
target_pages/api_documentation/extracted_specs/: なろうユーザ検索API.md  なろう小説ランキングAPI.md
target_pages/narou/bookmarks/: 440344-1-1.html  440344-1-17.html  59791-1-1.html  59791-1-2.html  59791-1-3.html  941181-1-1.html  941181-1-4.html
target_pages/narou/novel/: n7775do-11.html  n7775do-16.html  n7775do-2.html  n7775do-8.html  n8281jr-105.html  n8281jr-21.html
target_pages/narou_api/: WWWCメタタグチェックツール対応に関して _ なろうデベロッパー.html  なろう小説API _ なろうデベロッパー.html  なろう小説ランキングAPI _ なろうデベロッパー.html  小説Atomの仕様 _ なろうデベロッパー.html  活動報告Atomの仕様 _ なろうデベロッパー.html
target_pages/nocturne_api/: R18小説Atomの仕様 _ なろうデベロッパー.html  X活動報告Atomの仕様 _ なろうデベロッパー.html  なろうR18小説API _ なろうデベロッパー.html
(+28 files in other folders)
