[package]
name = "web-novel-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch"
path = "src/bin/fetch.rs"

[[bin]]
name = "fetch_ratings"
path = "src/bin/fetch_ratings.rs"

[[bin]]
name = "fetch_novel"
path = "src/bin/fetch_novel.rs"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
fake-useragent = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
scraper = "0.17"
async-trait = "0.1"